PCHR-1720: Styles for fixing labels visibility issue

--- a/scss/civicrm/contact/_detail.scss
+++ b/scss/civicrm/contact/_detail.scss
@@ -250,6 +250,11 @@
       td {
         background-color: transparent !important;
       }
+
+      td.label {
+        display: inline-block;
+        font-size: $font-size-base;
+      }
     }
   }
 
